--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"clsx": "^2.1.1",
 		"crypto-js": "^4.2.0",
 		"framer-motion": "^11.9.0",
+		"jotai": "^2.10.3",
 		"jwt-decode": "^4.0.0",
 		"lucide-react": "^0.441.0",
 		"react": "^18.2.0",
