--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 VITE_API_URL=http://localhost:5000/api
 VITE_APP_PORT=3000
+VITE_TMDB_API_URL=https://api.themoviedb.org/3
+VITE_TMDB_API_ACCESS_TOKEN=
