feat: update package react-router to latest version

--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
 		"react-error-boundary": "^4.0.13",
 		"react-helmet-async": "^2.0.5",
 		"react-hook-form": "^7.53.0",
-		"react-router-dom": "^6.3.0",
+		"react-router": "^7.1.1",
 		"react-toastify": "^10.0.5",
 		"tailwind-merge": "^2.5.2",
 		"tailwindcss-animate": "^1.0.7",
@@ -76,7 +76,7 @@
 		"husky": "^8.0.1",
 		"jsdom": "^25.0.1",
 		"lint-staged": "^13.0.3",
-		"msw": "^2.4.9",
+		"msw": "^2.7.0",
 		"postcss": "^8.4.47",
 		"prettier": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.8",
