--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,3 +1,13 @@
 {
-  "*.{ts,tsx}": "npm run lint"
+	"./src/*.{js,ts,cjs,mjs,d.cts,d.mts,jsx,tsx,json,jsonc}": [
+		"biome check --files-ignore-unknown=true",
+		"biome check --write --no-errors-on-unmatched",
+		"biome check --write --organize-imports-enabled=false --no-errors-on-unmatched",
+		"biome check --write --unsafe --no-errors-on-unmatched",
+		"biome format --write --no-errors-on-unmatched",
+		"biome lint --write --no-errors-on-unmatched"
+	],
+	"./src/*": [
+		"biome check --no-errors-on-unmatched --files-ignore-unknown=true"
+	]
 }
