--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "playground",
+	"name": "netflix-tmdb",
 	"private": true,
 	"version": "0.0.0",
 	"type": "module",
@@ -52,6 +52,7 @@
 		"@babel/preset-env": "^7.19.1",
 		"@babel/preset-react": "^7.18.6",
 		"@babel/preset-typescript": "^7.18.6",
+		"@biomejs/biome": "1.9.4",
 		"@mswjs/data": "^0.16.2",
 		"@tanstack/eslint-plugin-query": "^5.58.1",
 		"@tanstack/react-query-devtools": "^5.58.0",
